--- a/src/styles/components/businesses/map.css
+++ b/src/styles/components/businesses/map.css
@@ -72,9 +72,9 @@
 
 .map_modal {
   text-align: center;
-  width: 200px;
-  bottom: 80px;
-  left: -87px;
+  width: 269px;
+  bottom: 68px;
+  left: -156px;
   margin-left: -90px;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(12,0,51,0.1);
   background: white;
@@ -83,7 +83,11 @@
   background: linear-gradient(top, #f9d835, #f3961c);
   z-index: 100;
 }
-
+.map_modal hr {
+  width: 90%;
+  border: 1px solid rgba(96,125,139,0.25);
+  margin: 0px auto;
+}
 .map_modal:after {
   content: "";
   display: block; /* reduce the damage in FF3.0 */
@@ -97,29 +101,27 @@
 }
 
 .map_modal_top {
-  padding: 15px 15px 0 15px;
-  min-height: 60px;
+  padding: 15px;
+  min-height: 93px;
   width: 100%;
   bottom: 100%;
   position: absolute;
   background-color: inherit;
 }
 .map_modal_logo {
-  height: 44px;
-  display: block;
-  margin-top: -5px;
-  position: absolute;
+  width: 64px;
+  height: 64px;
+  display: inline-block;
 }
 .map_modal_title {
   color: #000000;
-  font-weight: bold;
-  font-size: 12px;
+  font-size: 16px;
   margin: 0;
-  position: relative;
-  padding-left: 48px;
+  display: inline-block;
+  width: 153px;
+  padding-right: 15px;
 }
 .map_modal_social {
-  border-top: .5px solid rgba(0,0,0,0.12);
   padding: 11px 15px 11px 15px;
 }
 .map .map-btn {
