--- a/src/styles/layout/_business.scss
+++ b/src/styles/layout/_business.scss
@@ -15,20 +15,30 @@
 }
 .business {
   transition: .3s ease all;
+  @media (max-width: 60em) {
+    padding-left: 0px !important;
+  }
 }
 .business-img {
   max-width: 0px;
   overflow: hidden;
+  .business-logo {
+    width: 0px;
+    transition: .3s ease all;
+  }
 }
 .business-logo{
-  width: 100%;
-  float: right;
+  width: 88px;
+  transition: .3s ease all;
+  @media (max-width: 60em) {
+    width: 88px;
+  }
 }
 .business-card {
   background-color: rgba(0, 0, 0, 0.05);
   padding: 20px 24px;
   margin-bottom: 12px;
-  overflow: hidden;
+  overflow-y: hidden;
   .business-service {
     p {
       font-size: 14px;
@@ -116,6 +126,15 @@
     display: inline-block;
     margin-bottom: 2px !important;
     cursor: default;
+  }
+  @media (max-width: 60em) {
+    overflow-y: scroll;
+    .service-description {
+      padding-right: 0px;
+    }
+    .main-contact {
+      margin-top: 16px;
+    }
   }
 }
 
