--- a/src/styles/layout/_business.scss
+++ b/src/styles/layout/_business.scss
@@ -16,7 +16,7 @@
   }
 }
 .business {
-  transition: .3s ease all;
+  transition: .4s ease all;
   cursor: pointer;
   @media (max-width: 60em) {
     padding-left: 0px !important;
@@ -28,12 +28,12 @@
   cursor: pointer;
   .business-logo {
     width: 0px;
-    transition: .3s ease all;
+    transition: .4s ease all;
   }
 }
 .business-logo{
   width: 88px;
-  transition: .3s ease all;
+  transition: .4s ease all;
   @media (max-width: 60em) {
     width: 88px;
   }
@@ -49,7 +49,7 @@
     }
   }
   .full-information {
-    transition: .3s ease all;
+    transition: .4s ease all;
     .business-title {
       opacity: 0.5;
       font-size: 14px;
@@ -110,7 +110,7 @@
   }
   .social-icons {
     margin-bottom: 32px;
-    transition: .3s ease all;
+    transition: .4s ease all;
     &-hide {
       display: none;
     }
@@ -119,17 +119,12 @@
     }
   }
   .search-filter-label {
-    background-color: $white-color;
-    color: $primary-color;
-    border-radius: 21px;
-    padding: 0 4px;
-    font-size: 10px !important;
-    font-weight: bold !important;
+    padding: 4px 7px;
+    font-weight: 300;
+    font-size: 10px;
     margin-right: 4px;
-    white-space: nowrap;
-    display: inline-block;
-    margin-bottom: 2px !important;
-    cursor: default;
+    pointer-events: none;
+    cursor: auto;
   }
   @media (max-width: 60em) {
     overflow-y: scroll;
