--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -135,6 +135,36 @@ $width: (
   max-width: 237px;
   width: 100%;
   height: 237px;
+  .map_modal_top {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 20px;
+  }
+  .map_modal {
+    width: 192px;
+    left: -10px;
+    bottom: 23px;
+    .map_modal_title {
+      font-size: 12px;
+      width: 114px;
+      padding: 5px;
+    }
+    .map_modal_logo {
+      width: 48px;
+      height: 48px;
+    }
+    hr {
+      display: none
+    }
+  }
+  .business_block--expanded_bottom {
+    visibility: hidden;
+    opacity: 0;
+    height: 0px;
+    padding: 0px;
+  }
 }
 
 .map-container-collapse {
