--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -48,6 +48,12 @@
         position: absolute;
         right: 5px;
         top: -8px;
+        @media (max-width: 1300px) {
+          right: -7px;
+        }
+        @media (max-width: 1200px) {
+          right: 5px;
+        }
         @media (max-width: 60em) {
           top: 24%;
           left: 160px;
@@ -164,8 +170,7 @@
       color: $primary-color;
       border-radius: 21px;
       padding: 0 12px 0 9px;
-      font-size: 14px !important;
-      font-weight: bold !important;
+      font-size: 14px;
       margin-right: 5px;
       margin-bottom: 2px;
       white-space: nowrap;
