Service tag filters should be more bold, on safari the button text is white when are clicked

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -23,6 +23,7 @@
       display: inline-block;
       vertical-align: middle;
       line-height: 24px;
+      color: #000;
     }
     span {
       display: inline-block;
