--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -51,6 +51,7 @@
   }
   &-dropdown {
     background-color: $primary-color;
+    width: 100%;
   }
   &-container {
     position: relative;
@@ -64,7 +65,6 @@
 .hero-dropdown-list{
   list-style: none;
   background-color: $primary-color;
-  width: 416px;
   padding: 8px;
   z-index: 900;
   margin: 0;
@@ -103,10 +103,10 @@
   }
 }
 .scroll-list {
-  max-height: 240px;
+  max-height: 350px;
   overflow-y: auto;
   @media (max-width: 375px) {
-    max-height: 200px;
+    max-height: 280px;
   }
 }
 .hero_input-hide {
@@ -118,8 +118,8 @@
   display: initial;
   position: absolute;
   transition: all 0.2s ease-in;
-  left: 27px;
-  top: 107%;
+  left: 0px;
+  top: 100%;
   z-index: 1;
   @media (max-width: 60em) {
     width: 100%;
