--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -1,132 +1,154 @@
 .hero_inputContainer {
-  position: relative;
-  max-width: 940px;
   margin: 48px auto 20px auto;
+  max-width: 940px;
+  position: relative;
+
+  .businesses-form {
+    align-items: center;
+    background-color: $primary-color;
+    display: flex;
+  }
+
   input {
-    &::placeholder,
-    &::-moz-placeholder,
-    &::-ms-input-placeholder {
+    @include placeholder {
       color: $white-color;
-      opacity: 0.75;
-      font-weight: normal;
       font-size: 20px;
+      opacity: 0.75;
       padding: 0px;
-      font-weight: 400;
+
       @media (max-width: 60em) {
         font-size: 16px;
         padding: -5px;
       }
     }
   }
+
   .hide-placeholder {
     input::placeholder {
       opacity: 0;
     }
   }
+
   .text-search-icon {
-    position: absolute;
-    right: 24px;
-    top: 23px;
     color: $fourth-color;
-    @media (max-width: 60em) {
-      right: 6%;
-      top: 31px;
-    }
+    cursor: pointer;
+    height: 27px;
+    padding: 24px;
+
     @media (max-width: 580px) and (min-width: 320px) {
       display: none;
     }
   }
 }
+
 .hero_input {
-  background-color: $primary-color;
+  background: transparent;
   border-radius: 0;
-  height: 76px;
-  width: 100%;
   border: none;
-  padding: 0 28px;
-  color: $fourth-color;
   box-sizing: border-box;
+  color: $fourth-color;
+  height: 76px;
+  padding: 0 28px;
+  width: 100%;
+
   &:focus {
     outline: none;
   }
+
   &-dropdown {
     background-color: $primary-color;
     width: 100%;
   }
+
   &-container {
-    position: relative;
     margin: auto;
     position: relative;
   }
 }
+
 .hero-dropdown-list-hide {
   display: none;
 }
-.hero-dropdown-list{
-  list-style: none;
+
+.hero-dropdown-list {
   background-color: $primary-color;
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0;
   padding: 8px;
   z-index: 900;
-  margin: 0;
-  box-sizing: border-box;
+
   li {
-    padding: 8px;
+    padding: 8px 12px;
     text-align: left;
+
     img {
-      width: 16px;
       vertical-align: middle;
+      width: 16px;
     }
+
     &:hover {
-      background-color: #3E3E3E;
+      background-color: #3e3e3e;
     }
   }
+
   a {
     color: $white-color;
     display: inline-block;
-    width: 95%;
-    vertical-align: middle;
     padding-right: 10px;
+    vertical-align: middle;
+    width: 95%;
   }
+
   .not-match-message {
     font-size: 16px;
     opacity: 0.75;
     text-align: left;
+
     &:hover {
       background-color: #000;
     }
   }
+
   @media (max-width: 60em) {
     width: 100%;
+
     li {
       width: 95%;
     }
   }
 }
+
 .scroll-list {
   max-height: 350px;
   overflow-y: auto;
+
   @media (max-width: 375px) {
     max-height: 280px;
   }
 }
+
 .hero_input-hide {
   display: none;
   position: absolute;
   transition: all 0.2s ease-out;
 }
+
 .hero_input-show {
   display: initial;
-  position: absolute;
-  transition: all 0.2s ease-in;
   left: 0px;
+  position: absolute;
   top: 100%;
+  transition: all 0.2s ease-in;
   z-index: 1;
+
   @media (max-width: 60em) {
-    width: 100%;
     left: 0;
-    top:100%;
+    top: 100%;
+    width: 100%;
   }
 }
-.highlight-element{
-  background-color: #3E3E3E;
+
+.highlight-element {
+  background-color: #3e3e3e;
 }
