--- a/src/styles/components/home/_hero.scss
+++ b/src/styles/components/home/_hero.scss
@@ -12,20 +12,20 @@
     line-height: 54px;
     margin: 0 0 5px;
   }
-  
+
   .sub-title {
     font-size: 16px;
     line-height: 24px;
   }
-  
+
   .hero_input {
     font-size: 20px;
   }
-  
+
   .logo {
     width: 60px;
   }
-  
+
   .logo-container {
     width: 100%;
     margin-bottom: 26px;
@@ -36,7 +36,7 @@
     line-height: 20px;
     margin-bottom: 40px;
   }
-  
+
   &-link {
     @media (max-width: 60em) {
       width: 100%;
@@ -44,11 +44,11 @@
       font-size: 14px;
     }
   }
-  
+
   @media (max-width: 60em) {
     min-height: 100vh;
   }
-  
+
   @media (max-width: 320px) {
     min-height: 120vh;
   }
@@ -87,11 +87,10 @@
   }
 
   .hero_input {
-    margin: 10px auto;
     padding-left: 16px;
     text-overflow: ellipsis;
     overflow: hidden;
-    margin: 10px 0 0;
+    margin: 0;
   }
 
   .hero_input_btn {
