--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import "components/home/hero";
 @import "components/businesses/resultInfo";
 @import "components/shared/snackbar";
+@import "components/businesses/business-details";
 
 //layout
 @import "layout/header";
