Updated styles of business card

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,6 +11,8 @@ $primary-color:                     #000000;
 $secondary-color:                   #2AD587;
 $third-color:                       #4A4A4A;
 $fourth-color:                      #00D3A7;
+$fifth-color:                       #DDF2F0;
+$sixth-color:                       #E5E5E5;
 $success-color:                     #0AC46F;
 $warning-color:                     #FFC000;
 $error-color:                       #FF0048;
