CS-579 Updated location side bar on details view

--- a/src/styles/components/businesses/_business-details.scss
+++ b/src/styles/components/businesses/_business-details.scss
@@ -10,3 +10,5 @@
 @import "./details/detail";
 @import "./details/services-offered";
 @import "./details/service";
+@import "./details/locations";
+@import "./details/location";
