--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $third-color:                       #4A4A4A;
 $fourth-color:                      #00D3A7;
 $fifth-color:                       #DDF2F0;
 $sixth-color:                       #E5E5E5;
+$eighth-color:                      #070709;
+$ninth-color:                       #00BA81;
 $success-color:                     #0AC46F;
 $warning-color:                     #FFC000;
 $error-color:                       #FF0048;
