CS-579 Added fetch organization by ID and mapped to the current components

--- a/src/styles/components/businesses/details/_services-offered.scss
+++ b/src/styles/components/businesses/details/_services-offered.scss
@@ -2,6 +2,7 @@
   border-bottom: 1px solid #e1e1e1;
   margin: 0 53px 32px 0;
   padding-bottom: 32px;
+  flex: 1;
 
   &__title {
     font-size: 20px;
