CS-583 Added social bar to the project

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $fifth-color:                       #DDF2F0;
 $sixth-color:                       #E5E5E5;
 $eighth-color:                      #070709;
 $ninth-color:                       #00BA81;
+$tenth-color:                       #EAECF0;
 $success-color:                     #0AC46F;
 $warning-color:                     #FFC000;
 $error-color:                       #FF0048;
