CS-583 Updated broken styles

--- a/src/styles/components/businesses/details/_social-bar.scss
+++ b/src/styles/components/businesses/details/_social-bar.scss
@@ -6,6 +6,10 @@
   justify-content: center;
   margin-bottom: 40px;
 
+  a {
+    outline: 0;
+  }
+
   &__item {
     cursor: pointer;
     font-size: 14px;
