--- a/src/styles/components/businesses/details/_services-offered.scss
+++ b/src/styles/components/businesses/details/_services-offered.scss
@@ -1,8 +1,9 @@
 .services-offered {
   border-bottom: 1px solid #e1e1e1;
   flex: 1;
-  padding-bottom: 32px;
   margin: 0 53px 32px 0;
+  min-width: 675px;
+  padding-bottom: 32px;
   position: relative;
 
   &__title {
