CS-587 Created Events container

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@
 @import "components/shared/jumbotron";
 @import "components/businesses/business-details";
 @import "components/blog/blog";
+@import './components/events/_events.scss';
 
 //layout
 @import "layout/header";
