CS-596 Added blog page with route

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import "components/businesses/resultInfo";
 @import "components/shared/snackbar";
 @import "components/businesses/business-details";
+@import "components/blog/blog";
 
 //layout
 @import "layout/header";
