CS-596 Added jumbotron to the share folder

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import "components/home/hero";
 @import "components/businesses/resultInfo";
 @import "components/shared/snackbar";
+@import "components/shared/jumbotron";
 @import "components/businesses/business-details";
 @import "components/blog/blog";
 
