CS-596 Added grid system and style cards on post list

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $sixth-color: #e5e5e5;
 $eighth-color: #070709;
 $ninth-color: #00ba81;
 $tenth-color: #eaecf0;
+$eleventh-color: #eaecf0;
 $success-color: #0ac46f;
 $warning-color: #ffc000;
 $error-color: #ff0048;
