--- a/src/styles/components/blog/_blog.scss
+++ b/src/styles/components/blog/_blog.scss
@@ -1,4 +1,6 @@
 .blog-container {
+  width: 100%;
+
   &__content {
     @include container;
   }
@@ -6,3 +8,6 @@
 
 @import "./featured-posts";
 @import "./featured-post";
+@import "./categories";
+@import "./post-lists";
+@import "./post-list-item";
