--- a/src/styles/components/events/_jumbotron.scss
+++ b/src/styles/components/events/_jumbotron.scss
@@ -21,4 +21,9 @@
     max-width: 466px;
     opacity: 0.75;
   }
+
+  @media (max-width: 960px) {
+    margin-top: 48px;
+    padding: 32px 16px;
+  }
 }
