CS-582 Added modal to location and some styles fixes

--- a/src/styles/components/businesses/details/_location.scss
+++ b/src/styles/components/businesses/details/_location.scss
@@ -7,8 +7,9 @@
     margin-bottom: 8px;
 
     &:hover {
-      text-decoration: underline;
       color: $ninth-color;
+      cursor: pointer;
+      text-decoration: underline;
     }
   }
 
@@ -19,7 +20,7 @@
     margin-bottom: 4px;
     opacity: 0.87;
 
-    &:hover {
+    &--hover:hover {
       color: $ninth-color;
       text-decoration: underline;
     }
