--- a/src/styles/components/events/_jumbotron.scss
+++ b/src/styles/components/events/_jumbotron.scss
@@ -1,7 +1,10 @@
 .events-jumbotron {
+  background-image: url('/static-data/backgrounds/events.png');
+  background-position: center;
+  background-size: cover;
   background: $third-color;
-  padding: 32px 0;
   margin-bottom: 40px;
+  padding: 32px 0;
 
   &__container {
     max-width: 960px;
