--- a/src/styles/components/businesses/_business-details.scss
+++ b/src/styles/components/businesses/_business-details.scss
@@ -29,3 +29,5 @@
 @import './details/location';
 @import './details/social-bar';
 @import './details/location_details';
+@import './details/upcoming-events';
+@import './details/left-bar';
