--- a/src/styles/components/businesses/details/_detail.scss
+++ b/src/styles/components/businesses/details/_detail.scss
@@ -19,4 +19,11 @@
     font-size: 14px;
     opacity: .87;
   }
+
+  @media (max-width: 60em) {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 10px;
+    width: 50%;
+  }
 }
