--- a/src/styles/components/businesses/details/_main-section.scss
+++ b/src/styles/components/businesses/details/_main-section.scss
@@ -1,8 +1,4 @@
 .business-details-section {
-  display: flex;
-  justify-content: center;
-  margin: 56px auto 40px !important;
-
   &__information {
     flex: 1;
     max-width: 632px;
@@ -30,7 +26,6 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    width: 350px;
 
     &__container {
       align-items: center;
@@ -48,5 +43,9 @@
   &__title {
     font-family: $font-family-bold;
     font-size: 36px;
+  }
+
+  @media (max-width: 60em) {
+    margin: 60px 25px 0 !important;
   }
 }
