--- a/src/styles/components/businesses/details/_services-offered.scss
+++ b/src/styles/components/businesses/details/_services-offered.scss
@@ -2,7 +2,6 @@
   border-bottom: 1px solid #e1e1e1;
   flex: 1;
   margin: 0 53px 32px 0;
-  min-width: 675px;
   padding-bottom: 32px;
   position: relative;
 
@@ -10,5 +9,9 @@
     font-size: 20px;
     line-height: 28px;
     margin-bottom: 24px;
+  }
+
+  @media (max-width: 60em) {
+    margin: 32px;
   }
 }
