Fixed layout on modal

--- a/src/styles/components/businesses/_business-details.scss
+++ b/src/styles/components/businesses/_business-details.scss
@@ -28,3 +28,4 @@
 @import "./details/locations";
 @import "./details/location";
 @import "./details/social-bar";
+@import "./details//location_details";
