CS-585 Added Featured Post layout

--- a/src/styles/components/businesses/_business-details.scss
+++ b/src/styles/components/businesses/_business-details.scss
@@ -30,4 +30,5 @@
 @import './details/social-bar';
 @import './details/location_details';
 @import './details/upcoming-events';
-@import './details/left-bar';
+@import './details//left-bar';
+@import './details/featured-post';
