--- a/src/styles/components/events/_jumbotron.scss
+++ b/src/styles/components/events/_jumbotron.scss
@@ -2,7 +2,7 @@
   background-image: url('/static-data/backgrounds/events.png');
   background-position: center;
   background-size: cover;
-  background: $third-color;
+  background-color: $third-color;
   margin-bottom: 40px;
   padding: 32px 0;
 
