CS-585 Updated problems after rebase

--- a/src/styles/components/businesses/_business-details.scss
+++ b/src/styles/components/businesses/_business-details.scss
@@ -31,4 +31,4 @@
 @import './details/location_details';
 @import './details/upcoming-events';
 @import './details//left-bar';
-@import './details/featured-post';
+@import './details/detail-featured-post';
