--- a/src/styles/components/businesses/details/_detail-featured-post.scss
+++ b/src/styles/components/businesses/details/_detail-featured-post.scss
@@ -1,4 +1,4 @@
-.featured-post {
+.detail-featured-post {
   background-color: $primary-color;
   border-radius: 5px;
   box-sizing: border-box;
@@ -24,6 +24,6 @@
   }
 }
 
-.featured-posts__title {
+.detail-featured-posts__title {
   margin-bottom: 16px;
 }
