--- a/src/styles/components/businesses/details/_detail-featured-post.scss
+++ b/src/styles/components/businesses/details/_detail-featured-post.scss
@@ -4,13 +4,15 @@
   box-sizing: border-box;
   color: white;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
   height: 130px;
-  padding: 16px;
+  justify-content: space-between;
+  padding: 16px 16px 20px;
 
   &__description {
     font-size: 14px;
     line-height: 20px;
-    margin-bottom: 16px;
   }
 
   &__date {
