--- a/src/styles/components/events/_modal-events.scss
+++ b/src/styles/components/events/_modal-events.scss
@@ -6,8 +6,14 @@
 
   &__section {
     font-size: 14px;
+    position: relative;
+
     &--extra-space {
       margin-bottom: 16px;
+    }
+
+    &--ml {
+      margin-left: 2em;
     }
   }
 
@@ -22,7 +28,10 @@
 
   &__icon {
     color: $ninth-color;
-    margin-right: 8px;
+    font-size: 18px !important;
+    position: absolute;
+    left: -1.4em;
+    transform: rotate(-45deg);
   }
 
   &__close {
