--- a/src/styles/components/businesses/details/_locations.scss
+++ b/src/styles/components/businesses/details/_locations.scss
@@ -1,4 +1,7 @@
 .detail-locations {
+  border-bottom: 1px solid #e1e1e1;
+  margin-bottom: 30px;
+
   &__title {
     font-size: 20px;
     line-height: 28px;
