--- a/src/styles/components/businesses/details/_locations.scss
+++ b/src/styles/components/businesses/details/_locations.scss
@@ -1,6 +1,7 @@
 .detail-locations {
   border-bottom: 1px solid #e1e1e1;
   margin-bottom: 30px;
+  padding-bottom: 20px;
 
   &__title {
     font-size: 20px;
@@ -10,9 +11,10 @@
   }
 
   &__all-locations {
-    line-height: 20px;
-    font-size: 14px;
     color: $ninth-color;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 20px;
 
     &:hover {
       text-decoration: underline;
