--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -156,3 +156,32 @@
     text-decoration: underline;
   }
 }
+
+.btn {
+  &:hover {
+    cursor: pointer;
+  }
+
+  &__submit {
+    align-items: center;
+    background-color: #02ba81;
+    border-color: transparent;
+    border-radius: 3px;
+    color: $white-color;
+    display: flex;
+    margin: 10px 0 24px;
+    height: 40px;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
+  }
+
+  &__password {
+    color: rgba(255, 255, 255, 0.7);
+    display: block;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    width: 100%;
+  }
+}
