--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@
 @import 'components/businesses/resultInfo';
 @import 'components/shared/snackbar';
 @import 'components/shared/jumbotron';
+@import 'components/shared/admin-login-form';
 @import 'components/businesses/business-details';
 @import 'components/blog/blog';
 @import './components/events/_events.scss';
