CS-608 Added form to reset password section

--- a/src/styles/components/shared/_admin-login-form.scss
+++ b/src/styles/components/shared/_admin-login-form.scss
@@ -1,6 +1,8 @@
 .admin-login-form {
   &__input {
     &__error-wrapper {
+      align-items: center;
+      display: flex;
       height: 25px;
     }
   }
