--- a/src/styles/layout/_mobile-footer.scss
+++ b/src/styles/layout/_mobile-footer.scss
@@ -1,75 +1,92 @@
 .mobile-footer {
-  width: 100%;
-  height: auto;
   background-color: #000;
-  color: #FFF;
-  text-align: center;
+  color: #fff;
+  height: auto;
   padding: 0px;
+  text-align: center;
+  width: 100%;
+
   .social-icons-container {
     padding: 24px;
   }
+
   &-list {
-    width: 100%;
     list-style: none;
-    padding: 0px;
     margin: 0;
+    padding: 0px;
     transition: 0.5s ease all;
+    width: 100%;
+
     svg {
       width: 20px;
     }
+
     .right-arrow {
       margin: 0 0 5px 0;
     }
+
     .list-options {
-      padding: 24px 0;
-      overflow:hidden;
-      max-height: 10px;
-      transition: 0.5s ease all;
       border-bottom: 1px solid rgba(73, 73, 73, 0.3);
+      max-height: 10px;
+      overflow: hidden;
+      padding: 24px 0 24px 20px;
+      transition: 0.5s ease all;
+
       svg {
         margin: 0 5px;
       }
     }
+
     .social-icons-title {
       font-size: 12px;
       margin-bottom: 12px;
     }
   }
+
   &-icon {
-    vertical-align: text-top !important;
     padding-right: 12px;
+    vertical-align: text-top !important;
   }
-  input{display:none}
+
+  input {
+    display: none;
+  }
   input:checked {
-    &~ li {
+    & ~ li {
       background-color: #161616;
       max-height: 240px;
+
       svg {
         transform: rotate(90deg);
       }
     }
   }
+
   ul.subDropDown {
-    padding:0;
-    list-style-type:none;
-    box-shadow:0 0 1px rgba(0,0,0,.3);
-    transition:max-height 0.5s ease-out;
-    min-width:100%;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+    list-style-type: none;
+    min-width: 100%;
+    padding: 0;
+    transition: max-height 0.5s ease-out;
+
     a {
-      display: block;
       color: #fff;
+      display: block;
       font-size: 14px;
       line-height: 20px;
       padding: 20px 0;
     }
   }
+
   img {
     margin-left: 3px;
     transition: all 0.2s ease-out;
   }
+
   @media (min-width: 61em) {
     display: none !important;
   }
+
   @media (max-width: 60em) {
     display: initial;
   }
