--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -164,7 +164,7 @@
 
   &__submit {
     align-items: center;
-    background-color: #02ba81;
+    background-color: $green-color;
     border-color: transparent;
     border-radius: 3px;
     color: $white-color;
@@ -174,6 +174,11 @@
     justify-content: center;
     padding: 0;
     width: 100%;
+
+    &:disabled,
+    &[disabled] {
+      cursor: not-allowed;
+    }
   }
 
   &__password {
