--- a/src/styles/components/blog/_featured-post.scss
+++ b/src/styles/components/blog/_featured-post.scss
@@ -2,6 +2,7 @@
   &__img-container {
     align-items: center;
     display: flex;
+    height: 225px;
     justify-content: center;
     margin-bottom: 12px;
     overflow: hidden;
