--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'base/margin';
 @import 'base/padding';
 @import 'base/details-titles';
+@import 'base/transforms';
 
 //Components
 @import 'components/search';
