--- a/src/styles/components/shared/_jumbotron.scss
+++ b/src/styles/components/shared/_jumbotron.scss
@@ -1,10 +1,18 @@
 .jumbotron {
-  background: $third-color;
-  padding: 32px 0;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  background-color: $third-color;
+  box-sizing: border-box;
+  display: flex;
+  height: 163px;
+  justify-content: flex-start;
   margin-bottom: 40px;
+  padding: 32px 0;
 
   &__container {
     @include container;
+    width: 100%;
   }
 
   &__title {
