CS-589 Displayed scheduler from kendo ui

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,3 +35,6 @@
 @import 'layout/business';
 @import 'layout/search-nav-mobile';
 @import 'layout/_result-page-mobile';
+
+//Kendo
+@import '~@progress/kendo-theme-default/scss/scheduler';
