CS-602 Implement Component States

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@
 @import 'components/businesses/business-details';
 @import 'components/blog/blog';
 @import './components/events/_events.scss';
+@import './components/shared/loading_background';
 
 //layout
 @import 'layout/header';
