--- a/src/styles/components/blog/_categories.scss
+++ b/src/styles/components/blog/_categories.scss
@@ -37,3 +37,11 @@
     margin-bottom: 24px;
   }
 }
+
+.blog-categories-loading {
+  &__item {
+    height: 24px;
+    margin-bottom: 8px;
+    width: 70%;
+  }
+}
