--- a/src/styles/components/blog/_post-list-item.scss
+++ b/src/styles/components/blog/_post-list-item.scss
@@ -32,3 +32,36 @@
     }
   }
 }
+
+.post-lists-loading {
+  box-sizing: border-box;
+  height: 200px;
+  margin-bottom: 24px;
+  padding: 48px;
+  width: 100%;
+
+  &__element {
+    background: $gray-color-three;
+    height: 18px;
+    margin-bottom: 8px;
+    width: 100%;
+
+    &__title {
+      margin-bottom: 16px;
+      height: 25px;
+      width: 80%;
+    }
+  }
+
+  &__title {
+    border-bottom: 2px solid black;
+    margin-bottom: 15px;
+
+    &__loading {
+      display: block;
+      height: 25px;
+      margin-bottom: 8px;
+      width: 200px;
+    }
+  }
+}
