--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,4 +37,6 @@
 @import 'layout/_result-page-mobile';
 
 //Kendo
+@import '~@progress/kendo-theme-default/scss/button';
+@import '~@progress/kendo-theme-default/scss/window';
 @import '~@progress/kendo-theme-default/scss/scheduler';
