CS-594 Fixed problems with dates

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -46,3 +46,9 @@ $font-size-paragraphe: 16px;
 
 //with
 $containers-max-width: 960px;
+$breakpoint-xs: 0px;
+$breakpoint-sm: 600px;
+$breakpoint-md: 960px;
+$breakpoint-lg: 1280px;
+$breakpoint-xl: 1920px;
+$breakpoint-ipad: 1024px;
