--- a/src/styles/base/_margin.scss
+++ b/src/styles/base/_margin.scss
@@ -25,6 +25,9 @@
 .m-bot-25 {
   margin-bottom: 25px;
 }
+.m-right-8 {
+  margin-right: 8px;
+}
 .m-right-24 {
   margin-right: 24px;
 }
@@ -58,9 +61,9 @@
 .margin-auto {
   margin: auto;
 }
-.margin-x-16{
+.margin-x-16 {
   margin: 0 16px;
 }
-.margin-y-20{
+.margin-y-20 {
   margin: 20px 0;
 }
