--- a/src/styles/components/events/_modal-events.scss
+++ b/src/styles/components/events/_modal-events.scss
@@ -15,6 +15,20 @@
     &--ml {
       margin-left: 2em;
     }
+
+    @media (max-width: 60em) {
+      span {
+        display: inline-block;
+
+        &:nth-child(2) {
+          width: 50%;
+        }
+
+        &:nth-child(3) {
+          display: none;
+        }
+      }
+    }
   }
 
   &__link {
