CS-603 Basic Layout for post details

--- a/src/styles/components/blog/_blog.scss
+++ b/src/styles/components/blog/_blog.scss
@@ -6,8 +6,9 @@
   }
 }
 
-@import "./featured-posts";
-@import "./featured-post";
-@import "./categories";
-@import "./post-lists";
-@import "./post-list-item";
+@import './featured-posts';
+@import './featured-post';
+@import './categories';
+@import './post-lists';
+@import './post-list-item';
+@import './post-details';
