--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 @import 'components/shared/snackbar';
 @import 'components/shared/jumbotron';
 @import 'components/shared/admin-login-form';
+@import 'components/shared/right-line';
 @import 'components/businesses/business-details';
 @import 'components/blog/blog';
 @import './components/events/_events.scss';
