CS-606 Display posts content

--- a/src/styles/components/_links.scss
+++ b/src/styles/components/_links.scss
@@ -9,3 +9,11 @@
 .link-primary {
   color: $primary-color;
 }
+
+.title-as-link {
+  cursor: pointer;
+
+  &:hover {
+    color: $green-color;
+  }
+}
