--- a/src/styles/components/blog/_post-details.scss
+++ b/src/styles/components/blog/_post-details.scss
@@ -5,4 +5,12 @@
   @media (max-width: 60em) {
     padding: 5em 1.5em 0;
   }
+
+  &__link {
+    cursor: pointer;
+
+    &:hover {
+      color: $green-color;
+    }
+  }
 }
