--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -195,6 +195,20 @@
     text-align: center;
     width: 100%;
   }
+
+  &__red {
+    align-items: center;
+    background-color: $red-color;
+    border-color: transparent;
+    border-radius: 3px;
+    color: $white-color;
+    display: flex;
+    margin: 0;
+    height: 40px;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
+  }
 }
 
 input:-webkit-autofill,
