CS-629 Added Profile Form

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'base/padding';
 @import 'base/details-titles';
 @import 'base/transforms';
+@import 'base/images';
 
 //Components
 @import 'components/search';
