CS-628 Added alias, reorder imports

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -26,6 +26,7 @@ $seconday-color-opacity: rgba(42, 213, 135, 0.17);
 // New color pallete
 $green-color: #00ba81;
 $green-color-hover: #ddf2f0;
+$green-btn-hover: #00a472;
 $gray-color-one: #f7f9fd;
 $gray-color-two: #eaecf0;
 $gray-color-three: #7b7c7e;
@@ -33,7 +34,9 @@ $gray-color-four: #bfbfbf;
 $gray-color-five: #dedede;
 $black-color: #000000;
 $black-color-secondary: #070709;
+$black-btn-hover: #2e2e2e;
 $red-color: #ff0048;
+$reb-btn-hover: #dd003e;
 
 //typography
 $font-family: 'proxima-nova-regular', Georgia, sans-serif;
