--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -185,6 +185,10 @@
     &[disabled] {
       cursor: not-allowed;
     }
+
+    &:hover {
+      background-color: $green-btn-hover;
+    }
   }
 
   &__password {
@@ -208,6 +212,10 @@
     justify-content: center;
     padding: 0;
     width: 100%;
+
+    &:hover {
+      background-color: $reb-btn-hover;
+    }
   }
 }
 
