CS-630 Finished Location form

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'base/details-titles';
 @import 'base/transforms';
 @import 'base/images';
+@import 'base/titles';
 
 //Components
 @import 'components/search';
