--- a/src/styles/base/_images.scss
+++ b/src/styles/base/_images.scss
@@ -1,6 +1,6 @@
 .img-wrapper {
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,5 +8,12 @@
   img {
     width: 50%;
     height: auto;
+  }
+
+  &--border {
+    border: 1px solid black;
+    @media (max-width: 60em) {
+      border: 0;
+    }
   }
 }
