CS-633 Small fixed with aligment and prevent update select with none option

--- a/src/styles/base/_padding.scss
+++ b/src/styles/base/_padding.scss
@@ -13,6 +13,12 @@
 .p-bot-10 {
   padding-bottom: 10px;
 }
+.p-bot-0 {
+  padding-bottom: 0 !important;
+}
+.p-top-0 {
+  padding-top: 0 !important;
+}
 .p-left-0 {
   padding-left: 0 !important;
 }
