CS-650 Added buttons actions to the title, Populate category options with backend call

--- a/src/styles/base/_margin.scss
+++ b/src/styles/base/_margin.scss
@@ -41,7 +41,7 @@
   margin-bottom: 40px;
 }
 .m-right-16 {
-  margin-right: 16px;
+  margin-right: 16px !important;
 }
 .m-right-52 {
   margin-right: 52px;
