--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -162,7 +162,7 @@
   align-items: center;
   border-radius: 3px;
   display: flex;
-  height: 40px;
+  min-height: 40px;
   justify-content: center;
   margin: 0;
   padding: 0;
@@ -220,6 +220,10 @@
     &:hover {
       background-color: $black-btn-hover;
     }
+  }
+
+  &--padding {
+    padding: 1em;
   }
 }
 
