CS-547 Add modal to delete action

--- a/src/styles/medium-draft/_styles.scss
+++ b/src/styles/medium-draft/_styles.scss
@@ -3,6 +3,10 @@
     background: none;
     color: $primary-color;
     padding: 0;
+
+    @media (max-width: 60em) {
+      padding-left: 32px;
+    }
   }
 
   .md-sb-button,
