--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -222,6 +222,15 @@
     }
   }
 
+  &__outline {
+    border: 0;
+    color: #7c7c7c;
+
+    &:hover {
+      color: $green-color;
+    }
+  }
+
   &--padding {
     padding: 1em;
   }
