--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -413,3 +413,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.clearfix:after {
+  content: '';
+  display: table;
+  clear: both;
+}
