--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -5,8 +5,13 @@
   display: flex;
   align-items: center;
 
-  .header_title .white-link {
+  .white-link {
     color: #fff;
+    opacity: 0.75;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   input {
