--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@
 @import 'components/buttons';
 @import 'components/pagination';
 @import 'components/home/hero';
+@import 'components/locations/services-location';
 @import 'components/businesses/resultInfo';
 @import 'components/shared/snackbar';
 @import 'components/shared/jumbotron';
