--- a/src/styles/base/_titles.scss
+++ b/src/styles/base/_titles.scss
@@ -4,3 +4,9 @@
   font-family: 'proxima-nova-bold', Georgia, sans-serif;
   line-height: 20px;
 }
+
+.events-form-title {
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 14px;
+}
