--- a/src/styles/components/businesses/details/_left-bar.scss
+++ b/src/styles/components/businesses/details/_left-bar.scss
@@ -1,6 +1,10 @@
 .left-bar {
   margin-left: 53px;
 
+  @media (max-width: 60em) {
+    margin: 0 32px;
+  }
+
   &__title {
     margin-bottom: 15px;
   }
