--- a/src/styles/base/_images.scss
+++ b/src/styles/base/_images.scss
@@ -1,17 +1,24 @@
 .img-wrapper {
-  width: 100%;
-  height: 100%;
-  display: flex;
   align-items: center;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   justify-content: center;
+  width: 100%;
+
+  .btn {
+    max-width: 80%;
+  }
 
   img {
-    width: 50%;
     height: auto;
+    width: 50%;
   }
 
   &--border {
     border: 1px solid black;
+
     @media (max-width: 60em) {
       border: 0;
     }
