--- a/src/styles/components/businesses/details/_location_details.scss
+++ b/src/styles/components/businesses/details/_location_details.scss
@@ -9,6 +9,8 @@
   }
 
   &__title {
+    font-size: 24px;
+    line-height: 36px;
     margin-bottom: 12px;
   }
 
@@ -22,7 +24,7 @@
 
   &__subtitle {
     font-size: 14px;
-    margin-bottom: 12px;
+    margin-bottom: 4px;
   }
 
   &__bottom-space {
