--- a/src/styles/layout/_business.scss
+++ b/src/styles/layout/_business.scss
@@ -27,7 +27,7 @@
 
 .business {
   cursor: pointer;
-  transition: .4s ease all;
+  transition: 0.4s ease all;
 
   @media (max-width: 1200px) {
     padding-left: 0px !important;
@@ -40,13 +40,13 @@
   overflow: hidden;
 
   .business-logo {
-    transition: .4s ease all;
+    transition: 0.4s ease all;
     width: 0px;
   }
 }
 
 .business-logo {
-  transition: .4s ease all;
+  transition: 0.4s ease all;
   width: 88px;
 
   @media (max-width: 60em) {
@@ -72,7 +72,7 @@
   }
 
   .full-information {
-    transition: .4s ease all;
+    transition: 0.4s ease all;
 
     .business-title {
       font-size: 14px;
@@ -144,7 +144,7 @@
 
   .social-icons {
     margin-bottom: 32px;
-    transition: .4s ease all;
+    transition: 0.4s ease all;
 
     &-hide {
       display: none;
@@ -196,14 +196,14 @@
     margin: 10px 8px;
 
     .business-type-container {
-      display: inline-block;
-      overflow-x: scroll;
-      white-space: nowrap;
+      display: flex;
+      flex-direction: column;
 
       div {
-        display: inline-block;
-        margin-right: 8px;
-        max-width: 240%;
+        flex: 1;
+        box-sizing: border-box;
+        //margin-right: 8px;
+        max-width: none;
       }
     }
   }
