CS-923 Fixed problem with menu ref

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,5 @@
 /* Set defaults */
+@import "~flexboxgrid/css/flexboxgrid.min.css";
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 @font-face {
